Changes to be committed: 	renamed:    sql/reservation.sql -> sql/01_reservation_db.sql 	new file:   sql/02_flight.sql 	new file:   sql/03_passenger.sql 	new file:   sql/04_reservation.sql 	new file:   sql/README.md 	modified:   src/main/java/com/spring/mvc/config/SecurityConfig.java 	new file:   src/main/java/com/spring/mvc/service/CustomUserDetailsService.java modified:   src/main/resources/application.properties 	modified:   src/main/resources/templates/checkout.html 	new file:   src/main/resources/templates/fragments/csrf.html 	modified:   src/main/resources/templates/fragments/header.html 	modified:   src/main/resources/templates/login.html 	modified:   src/main/resources/templates/profile.html 	modified:   src/main/resources/templates/register.html 	modified:   src/main/resources/templates/reservation-form.html

--- a/src/main/resources/templates/reservation-form.html
+++ b/src/main/resources/templates/reservation-form.html
@@ -46,9 +46,9 @@ Submission Date: 2025-10-30
                             <hr class="my-2">
                             <p class="mb-0">
                                 <strong>Departure:</strong> 
-                                <span th:text="${#temporals.format(flight.departure_time, 'EEEE, MMMM dd, yyyy at HH:mm')}">
-                                    Monday, November 01, 2025 at 10:00
-                                </span>
+                                <span th:text="${#temporals.format(reservation.flight.departure_time, 'EEEE, MMMM dd, yyyy ''at'' HH:mm')}">
+								    Monday, November 01, 2025 at 10:00
+								</span>
                             </p>
                         </div>
 
