--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -126,7 +126,7 @@ Submission Date: 2025-10-30
                     </div>
                     <div class="card-body">
                         <form th:action="@{/reservations/confirm/{id}(id=${reservation.reservation_id})}" method="post">
-                            
+                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
                             <div class="mb-3">
                                 <label for="cardName" class="form-label">Cardholder Name</label>
                                 <input type="text" class="form-control" id="cardName" 
