--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -52,8 +52,9 @@ Submission Date: 2025-10-30
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <form th:action="@{/logout}" method="post" class="d-inline">
-                        <button type="submit" class="btn btn-outline-light ms-2">Logout</button>
-                    </form>
+					  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+					  <button type="submit" class="btn btn-outline-light ms-2">Logout</button>
+					</form>
                 </li>
             </ul>
         </div>
