--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -31,6 +31,7 @@ Submission Date: 2025-10-30
                     </div>
                     <div class="card-body p-4">
                         <form th:action="@{/profile/update}" th:object="${passenger}" method="post">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
                             <!-- Hidden ID field -->
                             <input type="hidden" th:field="*{passenger_id}">
 
