--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -24,6 +24,7 @@ Submission Date: 2025-10-30
                         <div th:if="${error}" class="alert alert-danger" role="alert" th:text="${error}"></div>
 
                         <form th:action="@{/register}" th:object="${passenger}" method="post">
+                        	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <label for="firstname" class="form-label">First Name *</label>
