Changes to be committed: 	modified:   sql/03_passenger.sql 	modified:   sql/README.md modified:   src/main/java/com/spring/mvc/controller/ReservationController.java 	modified:   src/main/java/com/spring/mvc/model/Reservation.java 	new file:   src/main/resources/static/js/debug/debug-login.js 	new file:   src/main/resources/static/js/debug/debug-register.js 	modified:   src/main/resources/templates/confirmation.html 	modified:   src/main/resources/templates/fragments/csrf.html 	modified:   src/main/resources/templates/fragments/header.html 	modified:   src/main/resources/templates/login.html 	modified:   src/main/resources/templates/register.html 	modified:   src/main/resources/templates/reservation-form.html

--- a/src/main/resources/templates/confirmation.html
+++ b/src/main/resources/templates/confirmation.html
@@ -70,13 +70,13 @@ Submission Date: 2025-10-30
                                         </tr>
                                         <tr>
                                             <td><strong>Departure:</strong></td>
-                                            <td th:text="${#temporals.format(reservation.flight.departure_time, 'EEEE, MMMM dd, yyyy at HH:mm')}">
+                                            <td th:text="${#temporals.format(reservation.flight.departure_time, 'EEEE, MMMM dd, yyyy ''at'' HH:mm')}">
                                                 Monday, November 01, 2025 at 10:00
                                             </td>
                                         </tr>
                                         <tr>
                                             <td><strong>Arrival:</strong></td>
-                                            <td th:text="${#temporals.format(reservation.flight.arrival_time, 'EEEE, MMMM dd, yyyy at HH:mm')}">
+                                            <td th:text="${#temporals.format(reservation.flight.departure_time, 'EEEE, MMMM dd, yyyy ''at'' HH:mm')}">
                                                 Monday, November 01, 2025 at 14:30
                                             </td>
                                         </tr>
