--- a/src/main/resources/templates/fragments/csrf.html
+++ b/src/main/resources/templates/fragments/csrf.html
@@ -1,2 +1,8 @@
+<!-- 
+Student Name: Carl Nicolas Mendoza
+Student Number: 301386435
+Submission Date: 2025-10-30
+ -->
+
 <!-- src/main/templates/fragments/csrf.html -->
 <input th:fragment="token" type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
