--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -48,13 +48,13 @@ Submission Date: 2025-10-30
                     <a class="nav-link" href="/login">Login</a>
                 </li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
-                    <a class="nav-link btn btn-light text-primary ms-2" href="/register">Register</a>
+                    <a class="nav-link" href="/register">Register</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <form th:action="@{/logout}" method="post" class="d-inline">
-					  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-					  <button type="submit" class="btn btn-outline-light ms-2">Logout</button>
-					</form>
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                        <button type="submit" class="btn btn-link nav-link text-white text-decoration-none">Logout</button>
+                    </form>
                 </li>
             </ul>
         </div>
